--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,21 +4,160 @@
 /* font-family: 'Bungee Shade', cursive; */
 
 /* LES VARIABLES CSS ICI */
+:root{
+    --font-primaire:'Cardo', serif;
+    --font-secondaire:'Bungee Shade', cursive;
 
+    --couleur-primaire: #a7029a;
+    --couleur-secondaire: darkgray;
+
+    --couleur-noir:black;
+    --couleur-blanc:white;
+
+    --degrade-priamire: linear-gradient(36deg, rgba(167, 2, 154,.7) 0%, rgba(167, 2, 154,0)100%);
+}
 /*---------------------- Generic ----------------------*/
 
 /* Mettre la ligne universelle pour le box-sizing */
+*, *::before, *::after{
+    box-sizing: border-box;
+}
 
+h1, h2{
+    font-family: var(--font-secondaire);
+    color:var(--couleur-blanc);
 
+    margin: 0;
+}
+
+h2{
+    font-size: 80px;
+    line-height: 100%;
+}
+
+h3{
+    margin: 0;
+    font-size: 40px;
+}
+
+a{
+    color: var(--couleur-blanc);
+    text-decoration: none;
+}
+
+a:hover{
+    color: var(--couleur-primaire);
+    cursor: pointer;
+}
 
 /*---------------------- Elements ----------------------*/
+/*---- body, header etc etc etc ----*/
+body{
+    margin:0;
+    font-family: var(--font-primaire);
+    font-size: 18px;
+}
+
+.conteneur{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.header-principal{
+    background: var(--couleur-noir);
+    position: sticky;
+    top: 0;
+    z-index: 100;
+}
+
+.header-principal div{
+    display: flex;
+    align-items: center;
+}
 
 
 
+.hero{
+    height: 80vh;
+    background-color: var(--couleur-noir);
+    position: relative;
+}
+
+.hero video{
+    width: 100%;
+    height: 100%;
+
+    object-fit: cover;
+
+    opacity: .5;
+}
+
+.hero .content{
+    width: 100%;
+    height: 100%;
+
+    color: var(--couleur-blanc);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+
+.hero::after{
+    content: "";
+    width: 100%;
+    height: 100%;
+
+    background: var(--degrade-priamire);
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.hero p, .hero a{
+    font-size: 24px;
+}
+
+.interet{
+    text-align: center;
+    padding:66px 0 82px;
+    background: url("../images/bg-interet.jpg") fixed no-repeat;
+    background-size: cover;
+}
+
+.cartes{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.carte{
+    width: 31%;
+    height: 367px;
+    padding: 20px;
+    margin: 40px 0 0;
+
+    background: var(--couleur-blanc);
+
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+ .carte img{
+     width: 17vh;
+ }
 
 
 /*---------------------- Components ----------------------*/
-
+/*---- Classes et id I guess ----*/
 
 
 
